code/force-app/main/default/objects/Internal_Contact__c/Internal_Contact__c.object-meta.xml
<CustomObject>
    <label>行內聯絡窗口</label>
    <nameField>
        <displayFormat>查看內文-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>