code/force-app/main/default/objects/Internal_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>行內聯絡窗口</relationshipLabel>
    <relationshipName>Internal_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>