code/force-app/main/default/objects/Internal_Contact__c/fields/CS_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>CS_Employee_Code__c</fullName>
    <label>CS員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>