code/force-app/main/default/objects/Internal_Contact__c/fields/CS_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_Name__c</fullName>
    <label>CS姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>