code/force-app/main/default/objects/Internal_Contact__c/fields/CS_Phone__c.field-meta.xml
<CustomField>
    <fullName>CS_Phone__c</fullName>
    <label>CS電話</label>
    <length>81</length>
    <type>Text</type>
</CustomField>