code/force-app/main/default/objects/Internal_Contact__c/fields/CS_Unit__c.field-meta.xml
<CustomField>
    <fullName>CS_Unit__c</fullName>
    <label>CS所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>