code/force-app/main/default/objects/Internal_Contact__c/fields/Internal_Contact_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Internal_Contact_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>行內聯絡窗口外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>