code/force-app/main/default/objects/Internal_Contact__c/fields/PH_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>PH_Employee_Code__c</fullName>
    <label>PH窗口員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>