code/force-app/main/default/objects/Internal_Contact__c/fields/PH_Name__c.field-meta.xml
<CustomField>
    <fullName>PH_Name__c</fullName>
    <label>PH窗口姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>