code/force-app/main/default/objects/Internal_Contact__c/fields/PH_Phone__c.field-meta.xml
<CustomField>
    <fullName>PH_Phone__c</fullName>
    <label>PH窗口電話</label>
    <length>81</length>
    <type>Text</type>
</CustomField>