code/force-app/main/default/objects/Internal_Contact__c/fields/PH_Unit__c.field-meta.xml
<CustomField>
    <fullName>PH_Unit__c</fullName>
    <label>PH窗口所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>