code/force-app/main/default/objects/Internal_Contact__c/fields/PRINCIPAL_WM_AO_BRANCH_DESC__c.field-meta.xml
<CustomField>
    <fullName>PRINCIPAL_WM_AO_BRANCH_DESC__c</fullName>
    <label>公司負責人經管理專所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>