code/force-app/main/default/objects/Internal_Contact__c/fields/PS_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>PS_Employee_Code__c</fullName>
    <label>PS員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>