code/force-app/main/default/objects/Internal_Contact__c/fields/PS_Name__c.field-meta.xml
<CustomField>
    <fullName>PS_Name__c</fullName>
    <label>PS姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>