code/force-app/main/default/objects/Internal_Contact__c/fields/PS_Phone__c.field-meta.xml
<CustomField>
    <fullName>PS_Phone__c</fullName>
    <label>PS電話</label>
    <length>81</length>
    <type>Text</type>
</CustomField>