code/force-app/main/default/objects/Internal_Contact__c/fields/PS_Unit__c.field-meta.xml
<CustomField>
    <fullName>PS_Unit__c</fullName>
    <label>PS所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>