code/force-app/main/default/objects/Internal_Contact__c/fields/RM_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>RM_Employee_Code__c</fullName>
    <label>經管AO員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>