code/force-app/main/default/objects/Internal_Contact__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <label>經管AO姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>