code/force-app/main/default/objects/Internal_Contact__c/fields/RM_Phone__c.field-meta.xml
<CustomField>
    <fullName>RM_Phone__c</fullName>
    <label>經管AO電話</label>
    <length>81</length>
    <type>Text</type>
</CustomField>