code/force-app/main/default/objects/Internal_Contact__c/fields/RM_Unit__c.field-meta.xml
<CustomField>
    <fullName>RM_Unit__c</fullName>
    <label>經管AO所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>