code/force-app/main/default/objects/Internal_Contact__c/fields/Special_Store_Window_Name__c.field-meta.xml
<CustomField>
    <fullName>Special_Store_Window_Name__c</fullName>
    <label>特店窗口姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>