code/force-app/main/default/objects/Internal_Contact__c/fields/TMO_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>TMO_Employee_Code__c</fullName>
    <label>TMO員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>