code/force-app/main/default/objects/Internal_Contact__c/fields/TMO_Name__c.field-meta.xml
<CustomField>
    <fullName>TMO_Name__c</fullName>
    <label>TMO姓名</label>
    <length>81</length>
    <type>Text</type>
</CustomField>