code/force-app/main/default/objects/Internal_Contact__c/fields/TMO_Phone__c.field-meta.xml
<CustomField>
    <fullName>TMO_Phone__c</fullName>
    <label>TMO電話</label>
    <length>81</length>
    <type>Text</type>
</CustomField>