code/force-app/main/default/objects/Internal_Contact__c/fields/TMO_Unit__c.field-meta.xml
<CustomField>
    <fullName>TMO_Unit__c</fullName>
    <label>TMO所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>