code/force-app/main/default/objects/Internal_Contact__c/fields/WM_AO_BRANCH_DESC__c.field-meta.xml
<CustomField>
    <fullName>WM_AO_BRANCH_DESC__c</fullName>
    <label>經管理專所屬單位</label>
    <length>81</length>
    <type>Text</type>
</CustomField>