code/force-app/main/default/objects/Internal_Contact__c/fields/WM_AO_ID__c.field-meta.xml
<CustomField>
    <fullName>WM_AO_ID__c</fullName>
    <label>經管理專員編</label>
    <length>81</length>
    <type>Text</type>
</CustomField>