code/force-app/main/default/objects/Internal_Contact__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RM_Name__c</columns>
    <columns>Account__c</columns>
    <columns>PS_Name__c</columns>
    <columns>TMO_Name__c</columns>
    <columns>WM_AO_NAME__c</columns>
    <columns>PRINCIPAL_WM_AO_NAME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>